[gd_scene load_steps=6 format=2]

[ext_resource path="res://OldAndExperiments/Playground2.gd" type="Script" id=1]
[ext_resource path="res://PreBuilderLevels/Bucket.tscn" type="PackedScene" id=2]
[ext_resource path="res://Bucket.tscn" type="PackedScene" id=3]

[sub_resource type="Curve" id=1]
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 10, 63.5 )

[node name="Node2D" type="Node2D"]
script = ExtResource( 1 )

[node name="StaticBody" type="StaticBody2D" parent="."]
collision_layer = 2
input_pickable = true

[node name="TestLine" type="Line2D" parent="StaticBody"]
points = PoolVector2Array( -62, 47, 9.0309, 69.5401, 261, 104, 417, 199 )
width_curve = SubResource( 1 )
default_color = Color( 0.133333, 0.137255, 0.152941, 1 )

[node name="StaticBody2D" type="StaticBody2D" parent="."]
position = Vector2( 220, 225 )
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 0, -53.5 )
shape = SubResource( 2 )

[node name="Bucket" parent="." instance=ExtResource( 3 )]
visible = false
position = Vector2( 22, 77 )

[node name="BucketNew" parent="." instance=ExtResource( 2 )]
position = Vector2( 29, 75 )
